--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".UI.MainActivity">
+    tools:context=".UI.MainActivity"
+    android:id="@+id/main_parent">
 
     <TextView
         android:id="@+id/textView"
